fix: :bug: update Dockerfile to conditionally use npm ci or npm install based on the presence of package-lock.json

--- a/clinical-service/Dockerfile
+++ b/clinical-service/Dockerfile
@@ -9,7 +9,12 @@ COPY tsconfig.json ./
 COPY nest-cli.json ./
 
 # Install dependencies
-RUN npm ci
+# Use npm ci if package-lock.json exists, otherwise use npm install
+RUN if [ -f package-lock.json ]; then \
+      npm ci; \
+    else \
+      npm install && npm cache clean --force; \
+    fi
 
 # Copy source code
 COPY src ./src
@@ -26,7 +31,12 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Use npm ci if package-lock.json exists, otherwise use npm install
+RUN if [ -f package-lock.json ]; then \
+      npm ci --only=production && npm cache clean --force; \
+    else \
+      npm install --only=production && npm cache clean --force; \
+    fi
 
 # Copy built application from builder stage
 COPY --from=builder /app/dist ./dist
