chore: :sparkles: rename MySQL PersistentVolumeClaim from mysql-pvc to clinical-mysql-pvc for consistency in Kubernetes manifests

--- a/k8s/clinical-service/mysql-deployment.yaml
+++ b/k8s/clinical-service/mysql-deployment.yaml
@@ -76,5 +76,5 @@ spec:
       volumes:
       - name: mysql-data
         persistentVolumeClaim:
-          claimName: mysql-pvc
+          claimName: clinical-mysql-pvc
 
