--- a/k8s/clinical-service/mysql-pvc.yaml
+++ b/k8s/clinical-service/mysql-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pvc
+  name: clinical-mysql-pvc
   namespace: default
   labels:
     app: clinical-mysql
